refactored all tasks 'change' routes / controllers
